force-app/main/default/objects/ERP_Order__c/ERP_Order__c.object-meta.xml
<CustomObject>
    <label>ERP Order</label>
    <pluralLabel>ERP Orders</pluralLabel>
    <description>ERP Order</description>
    <nameField>
        <label>ERP Order Name</label>
        <type>AutoNumber</type>
        <displayFormat>ERP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>