force-app/main/default/objects/ERP_Order__c/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <label>ERP Number</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <description>ERP Number</description>
</CustomField>