force-app/main/default/objects/ERP_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>ERP Orders</relationshipLabel>
    <relationshipName>ERP_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order</description>
</CustomField>