force-app/main/default/objects/ERP_Order__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Payload</description>
</CustomField>