force-app/main/default/objects/ERP_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Acked</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>